--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "hover.css": "^2.3.2",
     "react": "^18.2.0",
+    "react-animated-text-content": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
