--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
