--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "aos": "^2.3.4",
     "hover.css": "^2.3.2",
     "react": "^18.2.0",
-    "react-animated-text-content": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
@@ -19,6 +18,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
+    "rxjs": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
