--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "aos": "^2.3.4",
+    "axios": "^1.5.0",
     "hover.css": "^2.3.2",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
