--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
