--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
