--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-fast-marquee": "^1.3.5",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
-    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
